feat(provider-kafka): add new status option for kafka topics